updated webpage saving for a moment to recover brain

--- a/index.html
+++ b/index.html
@@ -18,22 +18,16 @@
             <div id="navBar">
                 <ul id="navButtons">
                     <li class="navbutton">
-                        <a href="index.html">
-                            <button id="Home">Home</button>
-                        </a>
+                        <a href="index.html" id="home">Home</a>
                     </li>
-                    <li class="navbutton"><button id="aboutMe">About Me</button></li>
-                    <li class="navbutton"><button id="resume">Resume</button></li>
-                    <li class="navbutton"><button class="projects">Projects</button></li>
+                    <li class="navbutton"><a href ='#' id="aboutMe">About Me</a></li>
+                    <li class="navbutton"><a href='#'id="resume">Resume</a></li>
+                    <li class="navbutton"><a href='#'class="projects">Projects</a></li>
                     <li class="navbutton">
-                        <a href="https://github.com/a-champion" target="_blank">
-                            <button id="gitHub">GitHub</button>
-                        </a>
+                        <a href="https://github.com/a-champion" target="_blank" id="gitHub">GitHub</a>
                     </li>
                     <li class="navbutton">
-                        <a href="https://www.linkedin.com/in/a-champion/" target="_blank">
-                            <button id="linkedin">Linkedin</button>
-                        </a>
+                        <a href="https://www.linkedin.com/in/a-champion/" target="_blank" id="linkedin">Linkedin</a>
                     </li> 
                 </ul>
             </div>
@@ -48,60 +42,6 @@
             <p>I like to think im a <span class="rotatingTitle">hard working developer</span>.</p>
             <button class="projects"></button>
         </div>
-        <!-- <div id="bioContainer">
-
-        </div>
-        <div id="resumeContainer">
-            <h1>Resume</h1>
-            <div id="proSum">
-                <h2>Professional Summary</h2>
-                <p>Systematic Data Entry Clerk with 3 years of experience in organizing and managing data. Trained in database systems management using various technology platforms. Efficient in overseeing project deadlines by prioritizing and communicating with teammates. Administrative team member with strong history of providing clerical support and operational assistance to support staff needs. Diplomatic communicator and self-motivated worker with decisive nature necessary to manage independent work. Experienced in coordinating documents, supplies, and project resources.</p>
-            </div>
-            <div id="skills">
-                <h2>Skills</h2>
-                <ul id="skillSet">
-                    <li>Object Oriented Programming</li>
-                    <li>JavaScript</li>
-                    <li>Jquery</li>
-                    <li>Python</li>
-                    <li>Filing and data archiving</li>
-                </ul>
-            </div>
-            <div id="WorkHistory">
-                <h2>Experience</h2>
-                <ul>
-                    <li>Fire Control Specialist | DOD Feb. 2014- Oct. 2017
-                        <p>Devoted special emphasis to punctuality and worked to maintain outstanding attendance record, consistently arriving to work ready to start immediately. Reviewed completed work for compliance with regulations. Identified data entry errors and reported to necessary departments. Consistently met deadlines and requirements for all production work orders. Obtained scanned records and uploaded into database.</p>
-                    </li>
-                    <li>Store Advisor | GameStop Dec. 2012 - Jun. 2013
-                        <p>Helped customers complete purchases, locate items and join reward programs to promote loyalty, satisfaction and sales numbers. Kept drawers accurate, current and secure by checking bills for counterfeit markers, storing large bills and keeping adequate change. Maintained current knowledge of store promotions and highlighted sales to customers. Upheld high standards of accounting accuracy, quickly and accurately counting drawers at start and end of each shift.</p>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-        <div id="projectsContainer">
-            <h1>Projects</h1>
-            <div id="diffProjects">
-                <div id="projectOne">
-                    <p>Lorem Ipsum</p>
-
-                </div>
-                <div id="projectTwo">
-                    <p>Lorem IpsumTwo</p>
-
-                </div>
-                <div id="projectThree">
-                    <p>Lorem IpsumThree</p>
-
-                </div>
-
-
-            </div>
-
-
-        </div> -->
-
     </div>
 </body>
 </html>
