added rotating text and styled for desktop as best I could

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <body>
         <header>
             <nav>
-                <div id="icon">icon</div>
+                <div id="borgerMenu">
+                    <!-- <i class="openBorger">nav</i>
+                    <i class="closeBorger">close</i> -->
+                </div>
                 <ul id="navButtons">
                     <li class="navbutton">
                         <a href="index.html" id="home">Home</a>
@@ -37,8 +40,9 @@
             <div id="subNavAr">
                 <div id="subNav">
                     <h1>Antonio Champion</h1>
-                    <p>Lali Ho! I like to think I'm a <span class="rotatingTitle">hard working developer</span>.</p>
-                    <div id="mainButton" class="projects" >View Projects</div>
+                    <p>I'm a <span class="rotatingTitle">hard working guy</span></p>
+                    <p>and an okay-ish programmer</p>
+                    <div id="mainButton" id="resume" >Resume</div>
                 </div>
             </div>
         </header>
