--- a/index.html
+++ b/index.html
@@ -42,19 +42,13 @@
                     <h1>Antonio Champion</h1>
                     <p>I'm a <span class="rotatingTitle">hard working guy</span></p>
                     <p>and an okay-ish programmer</p>
-                    <div id="mainButton" id="resume" >Resume</div>
+                    <div id="mainButton" class="projects" >View Projects</div>
                 </div>
             </div>
         </header>
 
         <div id="mainContainer">
 
-            
-            <!-- <div id="subContainer">
-                <h1>Lali-HO! I'm A Champion</h1>
-                <p>I like to think im a <span class="rotatingTitle">hard working developer</span>.</p>
-                <a href="#" class="mainProj" class="navbutton" class="projects" >View Projects</a>
-            </div> -->
         </div>
     </body>
 </html>
