updated portfolio, added imgs for projects, changed resume to a link, updated project information, some styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a href="index.html" id="home">Home</a>
                     </li>
                     <li class="navbutton"><a href ='#' id="aboutMe">About Me</a></li>
-                    <li class="navbutton"><a href='#'id="resume">Resume</a></li>
+                    <li class="navbutton"><a href='https://docs.google.com/document/d/1oh6U5uDnD46q7muPqonk0yvDG1zHgUQ3lutAtLaGYmY/edit?usp=sharing' target ="_blank" id="resume">Resume</a></li>
                     <li class="navbutton"><a href='#'class="projects">Projects</a></li>
                     <li class="navbutton">
                         <a href="https://github.com/a-champion" target="_blank" id="gitHub">GitHub</a>
@@ -40,8 +40,8 @@
             <div id="subNavAr">
                 <div id="subNav">
                     <h1>Antonio Champion</h1>
-                    <p>I'm a <span class="rotatingTitle">hard working guy</span></p>
-                    <p>and an okay-ish programmer</p>
+                    <p>I'm a <span class="rotatingTitle">chill dude</span></p>
+                    <p>and a fullstack developer</p>
                     <div id="mainButton" class="projects" >View Projects</div>
                 </div>
             </div>
